# xtr-warp-rs

./: Makefile  README.md  multi_gpu_plan.md  pyproject.toml  sharding_improvements.md
.github/workflows/: ci.yml  publish-270.yml  publish-280.yml  release-wheels.yml  test-release.yml
python/xtr_warp/: search.py
rust/: lib.rs
rust/index/: compact.rs  create.rs  encode.rs  update.rs
rust/search/: decompressor.rs  loader.rs  merger.rs  mod.rs  scorer.rs
rust/utils/: types.rs
scripts/: validate_disk_sampling.py
tests/: test_index_management_sharded.py  test_sharding.py
